# PINES-ECS-DEPLOYMENT

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  helper_funcs.py  pyproject.toml  sqs_inference.py
