[tool.poetry]
name = "ECS-PINES"
version = "0.1.0"
description = "PINES docker deployment to run on ECS and read jobs from an SQS queue."
authors = ["KAYAN Irani <K4y4n12345@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.36.2"
torch = "^2.2.0"
python-dotenv = "^1.0.0"
boto3 = "^1.42.58"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
